= malge changelog

== Master (for 0.0.10)

== Version 0.0.9 [2016-03-04] released
* Modify errorfittedfunction to ignore most strict pair at fitting.
* Malge::SimultaneousEquations::NotRegularError   is added
* Malge::SimultaneousEquations::SizeMismatchError is added
* Malge::SimultaneousEquations::NotSquareError    is added

== Version 0.0.8 [2013-03-18] released
* Small revision.

== Version 0.0.7
* Add Malge::ErrorFittedFunction::AXInv2
* Add Malge::ErrorFittedFunction::AXInv3
* Malge::ErrorFittedFunction may raise UnableCalculationError if contain not finit value in coefficients after fitting.
* Debug Malge::ErrorFittedFunction; to delete finest value.
* Obsolete Malge::ErrorFittedFunction#finest_y; Use Malge::ErrorFittedFunction#most_strict_pairs alternatively.
* Change behavior of Malge::ErrorFittedFunction when generated; To keep the most precise value pair.

== Version 0.0.6)
* Rename Malge::ErrorFittedFunction::AXInv to Malge::ErrorFittedFunction::AXInvPlusB
* Rename Malge::ErrorFittedFunction::AXInv32 to Malge::ErrorFittedFunction::AXInv32PlusB

* New Malge::ErrorFittedFunction::AXInv   to fit purely inverse proportional function
* New Malge::ErrorFittedFunction::AXInv32 to fit purely inverse^{3/2} proportional function
* Change Malge::LeastSquare.least_square_proportional to return an array of one item.

== Version 0.0.5)
* @raw_pairs and @diff_abs_pairs in Malge::ErrorFittedFunction change to publicly readable.
* Add Malge::LeastSquare.least_square_proportional.

== Version 0.0.4
* Add Malge::ErrorFittedFunction and inherited classes.

== Version 0.0.3
* Add Malge::LeastSquare::a_exp_bx
* Add Malge::LeastSquare::least_square_a_exp_bx

== Version 0.0.2
* Change indent style from tab char to two spaces.
* Add lib/malge/leastsquare.rb for Malge::LeastSquare::least_square_1st_degree

== Version 0.0.1